[package]
name = "bevy_textbox"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16", default-features = false, features = [] }
bevy_pretty_text = { git = "https://github.com/void-scape/bevy_pretty_text.git" }
bevy_sequence = { git = "https://github.com/CorvusPrudens/bevy_sequence.git" }
